# src/model/SupplierGroup/supplierGroup.interface.ts
@@ -1,0 +1,10 @@
+import { OId } from '../../types/objectId';
+
+export interface ISupplierGroup {
+    _id: OId;
+    name: string;
+}
+
+export interface SupplierNameParams {
+    name: string;
+}
