# src/model/supplierGroup.interface.ts
@@ -1,6 +1,0 @@
-import { OId } from '../types/objectId';
-
-export interface ISupplierGroup {
-    _id: OId;
-    name: string;
-}
